Update with working Replicate example

--- a/examples/notebooks/ReplicateExperiment.ipynb
+++ b/examples/notebooks/ReplicateExperiment.ipynb
@@ -51,8 +51,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"DEBUG\"] = \"1\"  # Set this to \"\" to call Replicate's API, otherwise a mock function is used\n",
-    "os.environ[\"REPLICATE_API_TOKEN\"] = \"\""
+    "os.environ[\"DEBUG\"] = \"\"  # Set this to \"\" to call Replicate's API, otherwise a mock function is used\n",
+    "os.environ[\"REPLICATE_API_TOKEN\"] = \"r8_AlGz9ofN7OAwmiIcCqhxa6b4Duqgk4T3IyaaI\""
    ]
   },
   {
@@ -91,17 +91,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "347590cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "sd1 = \"stability-ai/stable-diffusion:27b93a2413e7f36cd83da926f3656280b2931564ff050bf9575f1fdf9bcd7478\"\n",
     "models = [sd1]  # You can specify multiple models here\n",
-    "input_kwargs = {\"prompt\": [\"a 19th century portrait of a wombat gentleman\", \"a 22nd century portrait of a wombat gentleman\"]}\n",
+    "input_kwargs = {\"prompt\": [\"a 19th century portrait of a wombat gentleman\", \"a 22nd century portrait of a robotic dog\"]}\n",
     "model_specific_kwargs = {sd1: {}}\n",
     "\n",
     "experiment = ReplicateExperiment(models, input_kwargs, model_specific_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ca01ff10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>images</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'prompt': 'a 19th century portrait of a wombat gentleman'}</td>\n",
+       "      <td>5.001268</td>\n",
+       "      <td><img src=\"https://pbxt.replicate.delivery/3xcGYj0qhCZyD5TiJ9W1zcjbCh4OkjggUYBf9M6c2zyY9avIA/out-0.png\" width=\"100\"/></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'prompt': 'a 22nd century portrait of a robotic dog'}</td>\n",
+       "      <td>5.024777</td>\n",
+       "      <td><img src=\"https://pbxt.replicate.delivery/gmUW2zllT0baHVnQ0cwsCyAEuDgETzm9MvTRId6IiXpteavIA/out-0.png\" width=\"100\"/></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "experiment.run()\n",
+    "experiment.visualize()"
    ]
   },
   {
@@ -110,87 +157,6 @@
    "metadata": {},
    "source": [
     "We can then run the experiment to get results."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1a261583",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "experiment.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fc4c4fd2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>input</th>\n",
-       "      <th>response</th>\n",
-       "      <th>latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{'prompt': 'a 19th century portrait of a wombat gentleman'}</td>\n",
-       "      <td>[https://mock.com/1.jpeg, https://mock.com/2.jpeg, https://mock.com/3.jpeg]</td>\n",
-       "      <td>0.000008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{'prompt': 'a 22nd century portrait of a wombat gentleman'}</td>\n",
-       "      <td>[https://mock.com/1.jpeg, https://mock.com/2.jpeg, https://mock.com/3.jpeg]</td>\n",
-       "      <td>0.000003</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                         input  \\\n",
-       "0  {'prompt': 'a 19th century portrait of a wombat gentleman'}   \n",
-       "1  {'prompt': 'a 22nd century portrait of a wombat gentleman'}   \n",
-       "\n",
-       "                                                                      response  \\\n",
-       "0  [https://mock.com/1.jpeg, https://mock.com/2.jpeg, https://mock.com/3.jpeg]   \n",
-       "1  [https://mock.com/1.jpeg, https://mock.com/2.jpeg, https://mock.com/3.jpeg]   \n",
-       "\n",
-       "    latency  \n",
-       "0  0.000008  \n",
-       "1  0.000003  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "experiment.visualize()"
    ]
   },
   {
@@ -206,16 +172,8 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "This will be updated with structural similarity evaluation. Please don't hesitate to open an issue if you have any suggestions. Stay tuned."
+    "This will be updated with structural similarity evaluation. For now, you can reference the example in the Stable Diffusion notebook example. Please don't hesitate to open an issue if you have any suggestions. Stay tuned."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78c0c9f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
