Refactor ReplicateExperiment to support both image (StableDiffusion) and text (Llama 2) models

--- a/examples/notebooks/ReplicateLlama2.ipynb
+++ b/examples/notebooks/ReplicateLlama2.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "beaa70a1",
    "metadata": {},
    "outputs": [],
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "347590cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "sd1 = \"replicate/llama-2-70b-chat:2796ee9483c3fd7aa2e171d38f4ca12251a30609463dcfd4cd76703f22e96cdf\"\n",
     "models = [sd1]  # You can specify multiple models here\n",
-    "input_kwargs = {\"prompt\": [\"Tell me a story about a 19th century wombat gentleman\",\n",
-    "                           \"Tell me a story about a 22nd century wombat gentleman\"]}\n",
-    "model_specific_kwargs = {sd1: {}}`w\n",
+    "input_kwargs = {\"prompt\": [\"Tell me a story about a 19th century wombat gentleman. Keep it short.\",\n",
+    "                           \"Tell me a story about a 22nd century wombat gentleman. Keep it short.\"]}\n",
+    "model_specific_kwargs = {sd1: {}}\n",
     "\n",
     "experiment = ReplicateExperiment(models, input_kwargs, model_specific_kwargs)"
    ]
@@ -114,28 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f6eac1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "ca01ff10",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "experiment.run()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "772d0006",
+   "id": "53b89b7f",
    "metadata": {},
    "outputs": [
     {
@@ -167,28 +147,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{'prompt': 'Tell me a story about a 19th century wombat gentleman'}</td>\n",
-       "      <td>&lt;generator object Prediction.output_iterator at 0x1583c3f10&gt;</td>\n",
-       "      <td>0.384344</td>\n",
+       "      <td>{'prompt': 'Tell me a story about a 19th century wombat gentleman. Keep it short.'}</td>\n",
+       "      <td>Once upon a time, in the late 19th century, there was a wombat named Winston who lived in the rolling hills of the English countryside. Winston was a gentleman of refined taste and manners, known for his impeccable dress sense and love of fine tea. Every afternoon, he would don his finest top hat and tails and venture into the nearby village for a spot of tea and a chat with the locals. Despite his somewhat unconventional appearance, Winston was well-liked by all who knew him, and his wit</td>\n",
+       "      <td>0.978888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{'prompt': 'Tell me a story about a 22nd century wombat gentleman'}</td>\n",
-       "      <td>&lt;generator object Prediction.output_iterator at 0x158488220&gt;</td>\n",
-       "      <td>0.295275</td>\n",
+       "      <td>{'prompt': 'Tell me a story about a 22nd century wombat gentleman. Keep it short.'}</td>\n",
+       "      <td>Certainly! Here's a short tale about a 22nd century wombat gentleman:\\n\\nIn the year 2105, a wombat named Winston lived in a sprawling underground burrow complex beneath the city of New Sydney. Winston was a gentleman of leisure, spending his days lounging on plush cushions and sipping tea served by his loyal butler-bot. He was known throughout the city for his impeccable taste in fine hats and his ability to recite Shakespearean sonnets with ease.</td>\n",
+       "      <td>0.355229</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                 input  \\\n",
-       "0  {'prompt': 'Tell me a story about a 19th century wombat gentleman'}   \n",
-       "1  {'prompt': 'Tell me a story about a 22nd century wombat gentleman'}   \n",
+       "                                                                                 input  \\\n",
+       "0  {'prompt': 'Tell me a story about a 19th century wombat gentleman. Keep it short.'}   \n",
+       "1  {'prompt': 'Tell me a story about a 22nd century wombat gentleman. Keep it short.'}   \n",
        "\n",
-       "                                                       response   latency  \n",
-       "0  <generator object Prediction.output_iterator at 0x1583c3f10>  0.384344  \n",
-       "1  <generator object Prediction.output_iterator at 0x158488220>  0.295275  "
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         response  \\\n",
+       "0   Once upon a time, in the late 19th century, there was a wombat named Winston who lived in the rolling hills of the English countryside. Winston was a gentleman of refined taste and manners, known for his impeccable dress sense and love of fine tea. Every afternoon, he would don his finest top hat and tails and venture into the nearby village for a spot of tea and a chat with the locals. Despite his somewhat unconventional appearance, Winston was well-liked by all who knew him, and his wit   \n",
+       "1   Certainly! Here's a short tale about a 22nd century wombat gentleman:\\n\\nIn the year 2105, a wombat named Winston lived in a sprawling underground burrow complex beneath the city of New Sydney. Winston was a gentleman of leisure, spending his days lounging on plush cushions and sipping tea served by his loyal butler-bot. He was known throughout the city for his impeccable taste in fine hats and his ability to recite Shakespearean sonnets with ease.                                            \n",
+       "\n",
+       "    latency  \n",
+       "0  0.978888  \n",
+       "1  0.355229  "
       ]
      },
      "metadata": {},
@@ -196,6 +180,7 @@
     }
    ],
    "source": [
+    "experiment.run()\n",
     "experiment.visualize()"
    ]
   },
@@ -212,7 +197,7 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "This notebook is meant to showcase how you can use Replicate's API for Llama2. Please reference other notebook for evaluating the model's response."
+    "This notebook is meant to showcase how you can use Replicate's API for Llama2. Please reference other notebook for evaluating the model's response. The examples from the notebook examples of OpenAI and Anthropic provide good references on how to evaluate LLM responses."
    ]
   }
  ],
