--- a/examples/notebooks/image_experiments/ReplicateStableDiffusion.ipynb
+++ b/examples/notebooks/image_experiments/ReplicateStableDiffusion.ipynb
@@ -5,7 +5,7 @@
    "id": "0a13ddc8",
    "metadata": {},
    "source": [
-    "# Replicate Experiment Example"
+    "# Replicate Stable Diffusion Example"
    ]
   },
   {
@@ -98,10 +98,11 @@
    "source": [
     "sd1 = \"stability-ai/stable-diffusion:ac732df83cea7fff18b8472768c88ad041fa750ff7682a21affe81863cbe77e4\"\n",
     "models = [sd1]  # You can specify multiple models here\n",
-    "input_kwargs = {\"prompt\": [\"a 19th century portrait of a wombat gentleman\", \"a 22nd century portrait of a wombat gentleman\"]}\n",
+    "input_kwargs = {\"prompt\": [\"a 19th century portrait of a wombat gentleman\",\n",
+    "                           \"a 22nd century portrait of a wombat gentleman\"]}\n",
     "model_specific_kwargs = {sd1: {}}\n",
     "\n",
-    "experiment = ReplicateExperiment(models, input_kwargs, model_specific_kwargs)"
+    "experiment = ReplicateExperiment(models, input_kwargs, model_specific_kwargs, use_image_model=True)"
    ]
   },
   {
