--- a/examples/notebooks/FineTuningExperiment.ipynb
+++ b/examples/notebooks/FineTuningExperiment.ipynb
@@ -27,13 +27,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abbc7d2a",
+   "metadata": {},
+   "source": [
+    "You may need to install `prompttools`, `replicate`, and HuggingFace's `datasets` to complete this example."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "885dabeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools datasets replicate"
    ]
   },
   {
@@ -177,7 +185,7 @@
    "source": [
     "# Fine tuning GPT-3.5 on OpenAI\n",
     "\n",
-    "First, we'll create and upload a file for our fine tuning rows, and fine tune the model."
+    "First, we'll create and upload a file for our fine tuning rows, and fine tune the model. The file processing may take a few minutes, and the fine tuning may take a few hours."
    ]
   },
   {
@@ -238,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.FineTuningJob.create(training_file=\"file-name\", model=\"gpt-3.5-turbo\")"
+    "openai.FineTuningJob.create(training_file=\"YOUR_FILE_NAME_HERE\", model=\"gpt-3.5-turbo\")"
    ]
   },
   {
@@ -549,7 +557,9 @@
    "source": [
     "## Run fine tuning\n",
     "\n",
-    "For replicate, you will need to upload your fine-tuning rows to an accessible URL. For our example, we uploaded the file to an S3 bucket and used a signed URL to provide access."
+    "For replicate, you will need to upload your fine-tuning rows to an accessible URL. For our example, we uploaded the file to an S3 bucket and used a signed URL to provide access.\n",
+    "\n",
+    "The fine tuning may take a few hours."
    ]
   },
   {
