Updating Chroma example with chunking step

--- a/examples/notebooks/vectordb_experiments/ChromaDBExperiment.ipynb
+++ b/examples/notebooks/vectordb_experiments/ChromaDBExperiment.ipynb
@@ -113,7 +113,9 @@
    "source": [
     "Next, we create our test inputs. In this case, we would like to create a new ChromaDB collection.\n",
     "\n",
-    "During the experiment, for each embedding function, a new ChromaDB collection will be temporarily created. The documents will be added into it. Then, we will query from it and examine the results."
+    "During the experiment, for each embedding function, a new ChromaDB collection will be temporarily created. The documents will be added into it. Then, we will query from it and examine the results.\n",
+    "\n",
+    "You can test different chunking and pre-processing strategies by changing the input to the `\"documents\"` key of the dictionary. We will show a more complete example further below."
    ]
   },
   {
@@ -140,12 +142,21 @@
     "use_existing_collection = False  # Specify that we want to create a collection during the experiment\n",
     "\n",
     "# Documents that will be added into the database\n",
+    "# Based on your chunking and pre-processing steps, the `documents` will be different\n",
     "add_to_collection_params = {\n",
     "    \"documents\": [\"This is a document\", \"This is another document\", \"This is the document.\"],\n",
     "    \"metadatas\": [{\"source\": \"my_source\"}, {\"source\": \"my_source\"}, {\"source\": \"my_source\"}],\n",
     "    \"ids\": [\"id1\", \"id2\", \"id3\"],\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61551c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Our test queries\n",
     "query_collection_params = {\"query_texts\": [\"This is a query document\", \"This is a another query document\"]}\n",
     "\n",
@@ -652,7 +663,67 @@
    "id": "aaf4a45b",
    "metadata": {},
    "source": [
-    "You can also use auto evaluation. We will add an example of this in the near future."
+    "You can also use auto evaluation, which is shown in the RAG notebook example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6df2f997",
+   "metadata": {},
+   "source": [
+    "## Chunking and Pre-Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a0e841",
+   "metadata": {},
+   "source": [
+    "You may want to test various chunking and pre-processsing strategies prior to storing your documents into your vector database. One example of doing that is below.\n",
+    "\n",
+    "We have a built-in `chunk_text` function that allows you to chunk a source documents into chunks of varying maximum length.\n",
+    "\n",
+    "After we generate the desired documents, we can set up the rest of the experiments in the same way as above. We will then run, evalaute, aggregate, and save the results.\n",
+    "\n",
+    "We want to compute an aggregate score for each chunking strategy, this will allow us to compared different chunking/pre-processing strategies and choose the best one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f45654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prompttools.utils import chunk_text\n",
+    "\n",
+    "source_document = \"The United States of America (U.S.A. or USA), commonly known as the United States (U.S. or US) or simply America, is a country primarily located in North America and consisting of 50 states, a federal district, five major unincorporated territories, and nine Minor Outlying Islands.[i] It includes 326 Indian reservations. It is the world's third-largest country by both land and total area.[c] It shares land borders with Canada to its north and with Mexico to its south and has maritime borders with the Bahamas, Cuba, Russia, and other nations.[j] With a population of over 333 million,[k] it is the most populous country in the Americas and the third-most populous in the world. The national capital of the United States is Washington, D.C., and its most populous city and principal financial center is New York City.\"\n",
+    "\n",
+    "for max_chunk_len in [20, 30, 40]:  # Test different chunking strategy\n",
+    "    # Create documents for each strategy\n",
+    "    doc_chunks = chunk_text(source_document, max_chunk_len)\n",
+    "    n_doc = len(doc_chunks)\n",
+    "    metadatas = [{\"source\": \"my_source\"}] * n_doc\n",
+    "    ids = [\"id\" + str(i) for i in range(n_doc)]\n",
+    "    # Build the relevant parameters to write into ChromaDB\n",
+    "    add_to_collection_params = {\n",
+    "        \"documents\": doc_chunks,\n",
+    "        \"metadatas\": metadatas,\n",
+    "        \"ids\": ids,\n",
+    "    }\n",
+    "    # Next steps: as shown in the previous code and other notebook examples\n",
+    "    # 1. Set up the rest of your experiment\n",
+    "    # 2. Run Experiment\n",
+    "    # 3. Evaluate the results from this chunking strate\n",
+    "    # 4. Aggregate and save the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b781911",
+   "metadata": {},
+   "source": [
+    "You can further integrate this vector DB experiment with the RetrievalAugmentedGeneration (RAG) experiment. Please see the Retrieval Augmented Generation notebook example."
    ]
   }
  ],
