Updating RAG example to mention chunking and reference ChromaDb example

--- a/examples/notebooks/vectordb_experiments/RetrievalAugmentedGeneration.ipynb
+++ b/examples/notebooks/vectordb_experiments/RetrievalAugmentedGeneration.ipynb
@@ -91,9 +91,9 @@
     "\n",
     "We will set up a vector database experiment. We will insert documents the DB with different embedding functions (vectorizer), and query the results.\n",
     "\n",
-    "For this example, we will use ChromaDB, but you use other vector databases (e.g. Weaviate, LanceDB, Qdrant) as well.\n",
+    "For this example, we will use ChromaDB, but you use other vector databases (e.g. Weaviate, LanceDB, Qdrant) as well. You can also experiment over different distance function and query methods if desired.\n",
     "\n",
-    "For detailed explanation about each step, have a look at the ChromaDB example notebook."
+    "For detailed explanation about each step, have a look at the [ChromaDB example notebook](https://github.com/hegelai/prompttools/blob/main/examples/notebooks/vectordb_experiments/ChromaDBExperiment.ipynb). It also discusses how you can try different chunk and pre-processing strategies as you insert documents into the database."
    ]
   },
   {
